Move NonUserMain (component/ to pages/) & Resolve overlapped navbar

--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -1,5 +1,5 @@
 .register {
-  height: 100vh;
+  height: calc(100vh - 66px);
   width: 45vh;
   display: flex;
   flex-direction: column;
